tests/fuse/core/types/checker_binding.fuse
// EXPECTED OUTPUT:
// --- immutable assign ---
// errors: 1
// error: cannot assign to immutable binding `x`
// --- move tracking ---
// errors: 1
// error: use of moved value `r`
// --- var mutable ok ---
// errors: 0
// --- break outside loop ---
// errors: 1
// error: `break` outside loop
// --- ref assign ---
// errors: 1
// error: cannot assign through `ref` parameter `s`

import stage2.src.lexer
import stage2.src.parser
import stage2.src.ast
import stage2.src.token
import stage2.src.module
import stage2.src.checker
import stage2.src.error

fn checkSource(source: String) -> List<Diagnostic> {
  val tokens = lexer.lex(source, "test.fuse")
  match tokens {
    Ok(toks) => {
      val prog = parser.parse(toks, "test.fuse")
      match prog {
        Ok(p) => {
          // Build a minimal ModuleInfo.
          val info = ModuleInfo("test.fuse", p, [], [], [], [], [])
          var state = CheckerState([], "test.fuse")
          // Check each function declaration.
          var i = 0
          while i < p.declarations.len() {
            match p.declarations.get(i) {
              Some(d) => {
                match d {
                  Declaration.Function(fd) => checker.checkFunction(mutref state, info, fd),
                  _ => {}
                }
              },
              None => {}
            }
            i = i + 1
          }
          state.diagnostics
        },
        Err(msg) => [error.error(msg, "test.fuse", Span(1, 1), None)]
      }
    },
    Err(msg) => [error.error(msg, "test.fuse", Span(1, 1), None)]
  }
}

fn printErrors(diags: List<Diagnostic>) {
  println(f"errors: {diags.len()}")
  var i = 0
  while i < diags.len() {
    match diags.get(i) {
      Some(d) => {
        val sev = if d.isError() { "error" } else { "warning" }
        println(f"{sev}: {d.message}")
      },
      None => {}
    }
    i = i + 1
  }
}

@entrypoint
fn main() {
  // --- immutable assign: val x = 1; x = 2 ---
  println("--- immutable assign ---")
  val d1 = checkSource("fn test() { val x = 1\n x = 2 }")
  printErrors(d1)

  // --- move tracking: move r; use r ---
  println("--- move tracking ---")
  val d2 = checkSource("fn test() { val r = 1\n consume(move r)\n println(r) }")
  printErrors(d2)

  // --- var mutable ok: var x = 1; x = 2 ---
  println("--- var mutable ok ---")
  val d3 = checkSource("fn test() { var x = 1\n x = 2 }")
  printErrors(d3)

  // --- break outside loop ---
  println("--- break outside loop ---")
  val d4 = checkSource("fn test() { break }")
  printErrors(d4)

  // --- ref assign ---
  println("--- ref assign ---")
  val d5 = checkSource("fn test(ref s: String) { s = \"hi\" }")
  printErrors(d5)
}
